--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "MammothMKIV/Validator",
+  "name": "mammothmkiv/php-validator",
   "description": "PHP validation library",
   "license": "MIT",
   "keywords": ["validator"],
